--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,6 @@ html {
 
 body {
   width: 100%;
-  overflow-x: hidden;
   position: relative;
   min-height: 100vh;
   margin: 0;
